Dark mode part 6: lighter color fix

--- a/judgels-frontends/raphael/src/routes/home/HomePage/HomePage.scss
+++ b/judgels-frontends/raphael/src/routes/home/HomePage/HomePage.scss
@@ -28,6 +28,10 @@
   color: white !important;
 }
 
+.bp4-dark .home-banner__text {
+  color: $dark-text-color !important;
+}
+
 .home-banner__buttons {
   margin-top: 40px;
 }
