--- a/judgels-frontends/raphael/src/styles/_ratings.scss
+++ b/judgels-frontends/raphael/src/styles/_ratings.scss
@@ -16,7 +16,8 @@
   color: #738694 !important;
 }
 
-.rating-green {
+.rating-green,
+.bp4-dark .rating-green {
   color: #70ad47 !important;
   font-weight: bold;
 }
@@ -40,7 +41,8 @@
   color: #cc99cd !important;
 }
 
-.rating-orange {
+.rating-orange,
+.bp-dark .rating-orange {
   color: #f6b26b !important;
   font-weight: bold;
 }
